--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
                 <a class="py-2 d-none d-md-inline-block" href="/services">Paslaugos</a>
                 <a class="py-2 d-none d-md-inline-block" href="/feedback">Atsiliepimai</a>
                 <a class="py-2 d-none d-md-inline-block" href="/contact">Kontaktai</a>
+                <a class="py-2 d-none d-md-inline-block" href="/profile">Profilis</a>
                 {% if app.user %}
                     <a class="py-2 d-none d-md-inline-block" href="{{ logout_path('main') }}">
                         Atsijungti</a>
