prisiregistravus nustatau ROLE_USER, adminas gali perziuret vartotojus ir nustatyt ju role

--- a/templates/aboutus/info.html.twig
+++ b/templates/aboutus/info.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    <img src="http://www.krasta-auto.lt/wp-content/uploads/2018/03/fiat-500-slider.jpg"></img>
+    <img src="http://www.krasta-auto.lt/wp-content/uploads/2018/03/fiat-500-slider.jpg" width="100%"></img>
 <br />
 <h1>Apie mus</h1>
     <br />
