--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
             <link rel="stylesheet" href="{{asset('css/styles.css')}}">
             <link rel="stylesheet" href="{{asset('css/homenavbar.css')}}">
         {% endblock %}
-      /*  <nav class="site-header sticky-top py-1">
+        <nav class="site-header sticky-top py-1">
             <div class="container d-flex flex-column flex-md-row justify-content-between">
                 <a class="py-2" href="/">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
@@ -28,6 +28,9 @@
                         <div class="dropdown-content">
                             <a href="#">Pakeisti slaptazodi</a>
                             <a href="/profile">Pakeisti profili</a>
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <a href="/dashboard">Vartotojai</a>
+                            {% endif %}
                             <a href="{{ logout_path('main') }}">Atsijungti</a>
 
                         </div>
