--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Paslaugos{% endblock %}
 
 {% block body %}
-<img src="http://www.krasta-auto.lt/rolls-royce/wp-content/uploads/sites/11/2018/03/rolls-royce-servisas-hero.jpg"></img>
+<img src="http://www.krasta-auto.lt/rolls-royce/wp-content/uploads/sites/11/2018/03/rolls-royce-servisas-hero.jpg" width="100%"></img>
     <br/>
     <h1>Paslaugos</h1>
     <br>
