--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,8 @@
         <title>{% block title %}Welcome!{% endblock %} - Servisas Skiperis</title>
 
         {% block stylesheets %}
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">            <link rel="stylesheet" href="{{asset('css/mdb.css')}}">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{asset('css/mdb.css')}}">
             <link rel="stylesheet" href="{{asset('css/styles.css')}}">
             <link rel="stylesheet" href="{{asset('css/homenavbar.css')}}">
         {% endblock %}
