--- a/templates/profile/profileDetails.html.twig
+++ b/templates/profile/profileDetails.html.twig
@@ -3,7 +3,12 @@
 {% block body %}
 
     <a class="btn btn-default" href="/">Back to home</a>
-    <a class="btn btn-default" href="/profile/profileEdit/{{ app.user.id}}">Update profile</a>
+    {% if app.user.userInfo.id is defined %}
+        <a class="btn btn-default" href="{{ path('profileEdit', {'id': app.user.userInfo.id}) }} ">Update profile</a>
+    {% else %}
+        <a href="{{ path('profileCreate') }}">Profilis</a>
+    {% endif %}
+
     <hr>
 
   <h2 class="page header">Profile</h2>
@@ -11,9 +16,5 @@
       <li class="list-group-item"> first name: {{ userInfo.firstName }}</li>
       <li class="list-group-item"> last name: {{ userInfo.lastName }}</li>
       <li class="list-group-item"> born at: <strong>{{ userInfo.bornAt|date('F j, Y, g:i, a')}}</strong></li>
-      <li class="list-group-item"> country: {{ userInfo.country }}</li>
-      <li class="list-group-item"> city: {{ userInfo.city }}</li>
-      <li class="list-group-item"> address: {{ userInfo.address }}</li>
-      <li class="list-group-item"> description: {{ userInfo.description }}</li>
     </ul>
 {% endblock %}
