ADDED price list for repairs

--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+  Profilis
+{% endblock %}
+
 {% block body %}
 
   <h2 class="page header">Profile</h2>
