--- a/templates/profile/profileDetails.html.twig
+++ b/templates/profile/profileDetails.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    Profilis
+{% endblock %}
+
+
 {% block body %}
 
     <a class="btn btn-default" href="/">Back to home</a>
