--- a/templates/profile/profileCreate.html.twig
+++ b/templates/profile/profileCreate.html.twig
@@ -1,8 +1,13 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+  Profilis
+{% endblock %}
+
+
 {% block body %}
 
-  <h2 class="page header">Profile</h2>
+    <h2 class="page header">Profile</h2>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
