ADDED change password

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,7 @@
                             <a href="{{ path('dashboard') }}">Vartotojai</a>
                             {% endif %}
                             <a href="{{ path('myorders') }}">Mano uzsakymai</a>
+                            <a href="{{ path('changePassword') }}">Pasikeisti slaptazodi</a>
                             <a href="{{ logout_path('main') }}">Atsijungti</a>
 
                         </div>
