Pridejau galimybe redaguoti uzsakyma

--- a/templates/add_order/edit.html.twig
+++ b/templates/add_order/edit.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Užsakymo pridėjimas
+    Užsakymo redagavimas
 {% endblock %}
 
 {% block body %}
 
-    <h2 class="page header">Užsakymo pridėjimas</h2>
+    <h2 class="page header">Užsakymo redagavimas</h2>
     <div class="container-fluid">
         {{ form_start(form) }}
         {{ form_widget(form) }}
