ADD: user can reset forgotten password

--- a/templates/price/price.html.twig
+++ b/templates/price/price.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 
-<h1 style="text-align:justify;"> AUTOMOBILIŲ REMONTO KAINOS KAUNE</h1><p style="text-align:justify;"><br/></p>
+<h1 style="text-align:justify;"> AUTOMOBILIŲ SERVISO TEIKIAMOS PASLAUGOS</h1><p style="text-align:justify;"><br/></p>
 <table class="table table-stripped">
     <tbody>
     <tr>
