--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,6 +20,7 @@
                class="form-control"
                placeholder="Password" required>
         Not registered? Register <a class="py-2 d-none d-md-inline-block" href="/register"> here</a>.
+        <p> Pamirsote slaptazodi? <a class="py-2 d-none d-md-inline-block" href="{{ path('resetPassword') }}"> spauskite cia</a>. </p>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2018</p>
