FIX contactUs with administration via email

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <h2 class=page-header>Contact Form in Symfony</h2>
+            <h2 class=page-header>Contact us</h2>
 
             {{form_start(form)}}
             {{form_widget(form)}}
