few additions to contacts

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                 <a class="py-2 d-none d-md-inline-block" href="{{ path('services') }}">Paslaugos</a>
                 <a class="py-2 d-none d-md-inline-block" href="{{ path('feedback') }}">Atsiliepimai</a>
 
-                <a class="py-2 d-none d-md-inline-block" href="/{{ path('contact') }}">Kontaktai</a>
+                <a class="py-2 d-none d-md-inline-block" href="{{ path('contact') }}">Kontaktai</a>
 
                 {% if app.user %}
                     <div class="dropdown">
