--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,8 +36,8 @@
                             {% if is_granted('ROLE_ADMIN') %}
                             <a href="{{ path('dashboard') }}">Vartotojai</a>
                             {% endif %}
-                            <a href="{{ path('myorders') }}">Mano uzsakymai</a>
-                            <a href="{{ path('changePassword') }}">Pasikeisti slaptazodi</a>
+                            <a href="{{ path('myorders') }}">Mano užsakymai</a>
+                            <a href="{{ path('changePassword') }}">Pasikeisti slaptažodį</a>
                             <a href="{{ logout_path('main') }}">Atsijungti</a>
 
                         </div>
@@ -71,7 +71,7 @@
                 <div class="row">
 
                     <div class="col-md-3">
-                        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Vietove</h5>
+                        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Vietovė</h5>
                         <p>
                         <img src="images/locationsym.png" align="baseline" class="notmobile" style="width: 100%; max-width: 29px;">
                         Kaunas, Lietuva
@@ -87,13 +87,13 @@
                         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Darbo laikas</h5>
                         <ul class="list-unstyled">
                             <li>
-                                Monday-Friday 7:00 - 17:00
+                                Pirmadienis-Penktadienis 7:00 - 17:00
                             </li>
                             <li>
-                                Saturday 10:00-16:00
+                                Šeštadienis 10:00-16:00
                             </li>
                             <li>
-                                Sunday <b>CLOSED</b>
+                                Sekmadienis <b>Nedirbame</b>
                             </li>
                             <li>
                             </li>
@@ -103,7 +103,7 @@
                     <hr class="clearfix w-100 d-md-none">
 
                     <div class="col-md-4 mx-auto">
-                        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Apmokejimo budai</h5>
+                        <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Apmokėjimo būdai</h5>
                         <ul class="list-unstyled">
                             <li>
                                 <img src="images/cards.png" align="absmiddle" hspace="8" vspace="8" height="32" style="width: 100%; max-width: 75%;">
@@ -114,7 +114,7 @@
             </div>
             <div class="footer-copyright py-3 text-center">
                 © 2018 Copyright:
-                Skiperis
+                Škiperis
             </div>
             <!--/.Copyright-->
 
