--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Kontaktai{% endblock %}
+
 {% block body %}
 
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <h2 class=page-header>Contact us</h2>
+            <h2 class=page-header>Susisiekite su mumis</h2>
 
             {{form_start(form)}}
             {{form_widget(form)}}
