--- a/templates/email/orderCanceled.html.twig
+++ b/templates/email/orderCanceled.html.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<h3>Jusu uzsakymas atsauktas</h3>
+<h3>Jusu užsakymas atšauktas</h3>
 
-Nemalonu pranesti, taciau jusu uzsakymas atsauktas. Noredami gauti daugiau informacijos susisiekite telefonu +37061359887 arba atvykite i musu autoservisa.
+Nemalonu pranešti, tačiau jūsų užsakymas atšauktas. Noredami gauti daugiau informacijos susisiekite su mumis telefonu +37061359887 arba atvykite į mūsų autoservisą.
 
-Atsiprasome uz nepatogumus.
+Atsiprašome už nepatogumus.
 </html>
