--- a/templates/email/passwordReset.html.twig
+++ b/templates/email/passwordReset.html.twig
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<h3>Slaptazodzio atstatymas</h3>
+<h3>Slaptažodzio atstatymas</h3>
 
-Gavote si laiska, noredamas(-a) gauti nauja slaptazodi.
+Gavote šį laišką, noredamas(-a) gauti naują slaptažodi.
 
-Noredami pasikeisti slaptazodi spauskite cia: <a href="{{ url('passwordReset') }}?email={{ email }}&hash={{ hash }}">Pakeisti slaptazodi</a>.
+Norėdami pasikeisti slaptažodį spauskite čia: <a href="{{ url('passwordReset') }}?email={{ email }}&hash={{ hash }}">Pakeisti slaptažodį</a>.
 
-Dekojame, kad naudojates musu paslaugomis!
+Dękojame, kad naudojates mūsų paslaugomis!
 
 </html>
