--- a/templates/email/registrationEmail.html.twig
+++ b/templates/email/registrationEmail.html.twig
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<h3>Jus uzsiregistravote!</h3>
+<h3>Jus užsiregistravote!</h3>
 
-Sveiki, {{ name }}! Sveikiname sekmingai uzsiregistravus.
+Sveiki, {{ name }}! Sveikiname sėkmingai užsiregistravus.
 
-Noredami prisijungti spauskite cia: <a href="{{ url('login') }}">Prisijungimo puslapis</a>.
+Norėdami prisijungti spauskite čia: <a href="{{ url('login') }}">Prisijungimo puslapis</a>.
 
-Dekojame, kad naudojates musu paslaugomis!
+Dėkojame, kad naudojates mūsų paslaugomis!
 
-{#<img src="{{ absolute_url(asset('images/car-service.png')) }}">#}
 </html>
