--- a/templates/aboutus/info.html.twig
+++ b/templates/aboutus/info.html.twig
@@ -10,5 +10,5 @@
 <br />
 <h1>Apie mus</h1>
     <br />
-    <p>Savo veiklą pradėjome 2018 metais, šiandien atstovaujame visame pasaulyje pripažintiems prekės ženklams ir siūlome įspūdingą automobilių r „Eemonto pasirinkimą: nuo komercinių iki prabangių, retų ir sportinių. Aukščiausios kokybės paslaugas ir garantiją klientams suteikia platus „Skiperis“ autorizuotų techninio aptarnavimo centrų tinklas. Taip pat esame „JX Nippon“ korporacijos tepalų ženkloneos“ oficialus importuotojas Baltijos šalyse.</p>
+    <p>Savo veiklą pradėjome 2018 metais, šiandien atstovaujame visame pasaulyje pripažintiems prekės ženklams ir siūlome įspūdingą automobilių remonto pasirinkimą: nuo komercinių iki prabangių, retų ir sportinių. Aukščiausios kokybės paslaugas ir garantiją klientams suteikia platus „Škiperis“ autorizuotų techninio aptarnavimo centrų tinklas. Taip pat esame „JX Nippon“ korporacijos tepalų ženklo oficialus importuotojas Baltijos šalyse.</p>
 {% endblock %}
