--- a/templates/changePassword/changePassword.html.twig
+++ b/templates/changePassword/changePassword.html.twig
@@ -7,7 +7,7 @@
 
     {% block body %}
 
-        <h2 class="page header">password</h2>
+        <h2 class="page header">Slaptažodžio keitimas</h2>
 
         {{ form(changePassword_form) }}
     {% endblock %}
