--- a/templates/email/contactMessage.html.twig
+++ b/templates/email/contactMessage.html.twig
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<h3>You did it</h3>
-Hi {{ name }}! Your Message is successfully Submitted.
-We will get back to you soon!
-Thanks!
+<h3>Jums pavyko!</h3>
+Sveiki, {{ name }}! Jūsų pranešimas sėkmingai pristatytas.
+Greitai su jumis susisieksime!
+Ačiū, kad naudojatės mūsų paslaugomis!
 
 </html>
