--- a/templates/email/orderFinished.html.twig
+++ b/templates/email/orderFinished.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<h3>Jusu automobilis paruostas</h3>
+<h3>Jūsų automobilis paruoštas</h3>
 
-Pranesame, kad jusu automobilio remonto darbai baigti. Galite atvykti pasiimti automobilio jums patogiu metu.
+Pranešame, kad jūsų automobilio remonto darbai baigti. Galite atvykti pasiimti automobilio jums patogiu metu.
 </html>
