--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-  Profilis
+    Profilis
 {% endblock %}
 
 
 
 {% block body %}
 
-    <h2 class="page header">Profile</h2>
+    <h2 class="page header">Profilis</h2>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
