--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 {% form_theme registration_form 'bootstrap_4_layout.html.twig' %}
 
+{% block title %} Registracija {% endblock %}
+
+
 {% block body %}
     <div class="container justify-content-between">
     {{ form(registration_form) }}
