--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,25 +4,25 @@
 
     <form class="form-signin" action="{{ path('login') }}" method="POST">
         <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Prisijunkite</h1>
 
-        <label for="_username" class="sr-only">Username</label>
+        <label for="_username" class="sr-only">Vartotojo vardas</label>
         <input type="text"
                id="_username"
                name="_username"
                class="form-control"
                placeholder="Username" required autofocus>
 
-        <label for="_password" class="sr-only">Password</label>
+        <label for="_password" class="sr-only">Slaptažodis</label>
         <input type="password"
                id="_password"
                name="_password"
                class="form-control"
                placeholder="Password" required>
-        Not registered? Register <a class="py-2 d-none d-md-inline-block" href="/register"> here</a>.
-        <p> Pamirsote slaptazodi? <a class="py-2 d-none d-md-inline-block" href="{{ path('resetPassword') }}"> spauskite cia</a>. </p>
+         Neturite paskyros? Užsiregistruokite <a class="py-2 d-none d-md-inline-block" href="/register"> čia</a>.
+        <p> Pamiršote slaptažodį? <a class="py-2 d-none d-md-inline-block" href="{{ path('resetPassword') }}"> Spauskite čia</a>. </p>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Prisijungti</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2018</p>
     </form>
 
