Aptvarkiau formu dizaina

--- a/templates/changePassword/changePassword.html.twig
+++ b/templates/changePassword/changePassword.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% form_theme changePassword_form 'bootstrap_4_layout.html.twig' %}
 
    {% block title %}
        Slaptažodžio keitimas
@@ -7,9 +8,12 @@
 
     {% block body %}
 
+        <div class="container justify-content-between">
 
-        <h2 class="page header">Slaptažodžio keitimas</h2>
+            <h2 class="page header">Slaptažodžio keitimas</h2>
 
-        {{ form(changePassword_form) }}
+            {{ form(changePassword_form) }}
+        </div>
     {% endblock %}
+
 
