--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {% block title %}
     Profilis
@@ -7,10 +8,11 @@
 
 
 {% block body %}
+    <div class="container justify-content-between">
 
-    <h2 class="page header">Profilis</h2>
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
-
+        <h2 class="page header">Profilis</h2>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
