--- a/templates/add_order/index.html.twig
+++ b/templates/add_order/index.html.twig
@@ -1,16 +1,18 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {% block title %}
     Užsakymo pridėjimas
 {% endblock %}
 
 {% block body %}
+    <div class="container justify-content-between">
 
-    <h2 class="page header">Užsakymo pridėjimas</h2>
-    <div class="container-fluid">
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        {{ form_end(form) }}
+        <h2 class="page header">Užsakymo pridėjimas</h2>
+        <div class="container-fluid">
+            {{ form_start(form) }}
+            {{ form_widget(form) }}
+            {{ form_end(form) }}
+        </div>
     </div>
-
 {% endblock %}
