--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,10 +1,11 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {% block title %}Kontaktai{% endblock %}
 
 {% block body %}
 
-<div class="container">
+    <div class="container justify-content-between">
     <div class="row">
         <div class="col-sm-4">
             <h2 class=page-header>Susisiekite su mumis</h2>
