--- a/templates/profile/create.html.twig
+++ b/templates/profile/create.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {% block title %}
     Profilis
@@ -6,10 +7,11 @@
 
 
 {% block body %}
+    <div class="container justify-content-between">
 
     <h2 class="page header">Profile</h2>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
-
+    </div>
 {% endblock %}
